--- a/styles.css
+++ b/styles.css
@@ -4,21 +4,44 @@ body {
     text-align: center;
     background-color: rgb(47, 47, 47);
     color: greenyellow;
+    width: 200px;
 }
 
 #hackButton {
-    background-color: red;
+    background-color: transparent;
     border: none;
     padding: 5px;
     border-radius: 4px;
-    font-family: monospace;
-    font-size: x-large;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: yellowgreen;
+    transition-duration: 0.4s;
+    border: solid 1px red;
+
+}
+
+
+#hackButton:hover {
+    background-color: red;
+    color: black;
+}
+
+#title {
+    margin: 15px;
+    font-size: 1.75rem;
 }
 
 #credits {
-    
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 0.5rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/* This is for the color of the hyperlink in '@VirejDasani' */
 a:link,
 a:visited {
     color: rgb(119, 153, 244);
