--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ body {
 
 }
 
-
 #hackButton:hover {
     background-color: red;
     color: black;
@@ -40,6 +39,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#tutorial {
+    font-size: small;
+}
 
 /* This is for the color of the hyperlink in '@VirejDasani' */
 a:link,
